--- a/layout.html
+++ b/layout.html
@@ -62,13 +62,21 @@
         <div class="left-column">
             <div class="card">
                 <h2>About Me</h2>
+                <div class="fakeImage">Image</div>
+                <p>Laboris aute elit dolor dolore.</p>
+            </div>
+            <div class="card">
+                <h2>Popular Post</h2>
+                <div class="fakeImage">Image</div>
+                <div class="fakeImage">Image</div>
+                <div class="fakeImage">Image</div>
+            </div>
+            <div class="card">
+                <h2>Follow Me</h2>
+                <p>Some Text ...</p>
             </div>
         </div>
     </div>
-
-    <div class="footer">
-        <h2>Copyright &copy; 2021 Webhozz</h2>
-    </div>
-
+    
 </body>
 </html>
